Навайбкоженный каркас semanticTokens